--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>kranthis website</title>
+
   </head>
-  <body>
+  <body background="wallpaper.jpg" style="background-size:100% 100%">
     <form class="inputs" action="mailto:kranthikumar147369@gmail.com" method="post" >
       </form>
         <label>name:</label>
