--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
 
   </head>
   <body background="wallpaper.jpg" style="background-size:100% 100%">
-    <form class="inputs" action="mailto:kranthikumar147369@gmail.com" method="post" >
-      </form>
-        <label>name:</label>
+<video src="11.mp4" autoplay  controls>
+  <embed  src="11.mp4" width="40" height="40"></embed>
+</video>
+<h1 style="color:blue">THOSE WHO WANT THIS VIDEO MAIL ME</h1>
+    <form>
+        <label style="color:blue">name:</label>
         <input type="text"  name="entera name"><br><br><br>
-        <label>password:  </label>
-        <input type="password" name="enter password" ><br><br><br>
-        <label>radio: </label>
-        <input type="radio"  value="choose"><br><br><br>
+        <label style="color:blue">email:</label>
+        <input type="MAIL"  value=""><br><br><br>
          <label>range: </label>
-        <input type="range"  value="enter a range"><br><br><br><br>
-        <input type="checkbox"  value="checkbox"><br><br><br><br>
-        <input type="date"  value="date and </time>"><br><br><br><br><br><br><b></b>
-        <input type="file" name="" value=""><br><br><br><br><br>
-        <input type="submit" name="" value="submit"><br><br><br><br><br><br>
+        <input type="submit" name="" value="submit"><br><br><br>
     </form>
   </body>
 </html>
